Better handling of dumped DNS results